change homepage url github

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/Povindu/nilwala-tm-client"
+  "homepage": "https://Povindu.github.io/nilwala-tm-client"
 }
