--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "formik": "^2.4.5",
     "gh-pages": "^6.1.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -41,5 +43,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
