--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Povindu.github.io/nilwala-web-main"
+  "homepage": "http://www.nilwalaleos.org/"
 }
